--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/fitness.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/fitness.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitness App</title>
   </head>
