Added & Config React-animation-on-scroll

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="./public/fitness.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitness App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
